--- a/templates/index2.html
+++ b/templates/index2.html
@@ -218,7 +218,7 @@ body {
 	
 	<div class="chatdiv">  </div>
 	
-	
+	<div class="bottom_wrapper clearfix">
 	
 		<div class="message_input_wrapper">
 			<input type ="text" name="message" id="message" class="message_input" placeholder="Type your message here..." />
@@ -226,7 +226,7 @@ body {
 		<div class="send_message">
 			<div class="icon"></div>
 			
-			<button type="button" id="send">SEND</button>
+			<button class="btn btn-primary" type="button" id="send">SEND</button>
 				
 		</div>
 	</div>
