--- a/templates/index2.html
+++ b/templates/index2.html
@@ -203,6 +203,7 @@ body {
     </style>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="static/js/script.js"></script>
 	
 </head>
 <body>
@@ -224,10 +225,7 @@ body {
 			<input type ="text" name="message" id="message" class="message_input" placeholder="Type your message here..." />
 		</div>
 		<div class="send_message">
-			<div class="icon"></div>
-			
 			<button class="btn btn-primary" type="button" id="send">SEND</button>
-				
 		</div>
 	</div>
 </div>
@@ -239,60 +237,5 @@ body {
 		</div>
 	</li>
 </div>
-<script type="text/javascript">
-$(function(){
-
-	var sentHead = "<div class='row' style='margin: 5px 0px'> <div class='col-sm-offset-4 col-sm-8 text-right'> <div class='sent text-left'>";
-	var receivedHead = "<div class='row' style='margin: 5px 0px'> <div class='col-sm-8 text-left'> <div class='received text-left'>";
-	var tail = "</div> </div> </div>";
-		
-	function send() {
-		var data = {
-			"message" : $("#message").val(),
-			
-		};
-
-		$(sentHead+data.message+tail).hide().appendTo('.chatdiv').show("puff", {times : 3}, 200);
-
-		$(".chatdiv").animate({ scrollTop: $('.chatdiv').prop("scrollHeight")}, 1000);
-		$("#message").val("");
-
-		$.post("/",data,function(res){
-			console.log(res)
-
-
-			$(receivedHead+res+tail).hide().appendTo('.chatdiv').show("puff", {times : 3}, 200);
-
-			$(".chatdiv").animate({ scrollTop: $('.chatdiv').prop("scrollHeight")}, 1000);
-
-			
-		});
-
-	};
-
-
-	$("#message").keypress(function(event) {
-		if (event.which == 13) {
-			event.preventDefault();
-
-			if( $("#message").val() != "")
-				send();
-		}
-	});
-
-	$("#send").click(function(event){
-		if( $("#message").val() != "")
-			send()
-	})
-
-	function setInput(text) {
-		$("#message").val(text);
-		//send()
-	}
-});
-
-
-</script>
-
 </body>
 </html>
