--- a/templates/index2.html
+++ b/templates/index2.html
@@ -203,7 +203,7 @@ body {
     </style>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="static/js/script.js"></script>
+	<script type="text/javascript" src="static/js/Script.js"></script>
 	
 </head>
 <body>
