--- a/templates/index2.html
+++ b/templates/index2.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Chatbot</title>
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         * {
   box-sizing: border-box;
