--- a/templates/index2.html
+++ b/templates/index2.html
@@ -201,7 +201,11 @@ body {
 }
 
     </style>
-    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="static/js/Script.js"></script>
 	
 </head>
