--- a/templates/index2.html
+++ b/templates/index2.html
@@ -202,8 +202,12 @@ body {
 
     </style>
 	<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  src="https://code.jquery.com/jquery-3.1.1.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+  <script
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="static/js/Script.js"></script>
