--- a/templates/index2.html
+++ b/templates/index2.html
@@ -202,7 +202,7 @@ body {
 
     </style>
 	<script
-  src="https://code.jquery.com/jquery-3.1.1.js"
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
   <script
