--- a/templates/index2.html
+++ b/templates/index2.html
@@ -210,7 +210,7 @@ body {
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="static/js/Script.js"></script>
+	<script type="text/javascript" src="static/js/Script.js?a=1"></script>
 	
 </head>
 <body>
