--- a/templates/index2.html
+++ b/templates/index2.html
@@ -199,8 +199,9 @@ body {
 .message_template {
   display: none;
 }
-
     </style>
+	
+	<link type="text/css" rel="stylesheet" href="static/css/style.css"></link>
 	<script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
