--- a/templates/index2.html
+++ b/templates/index2.html
@@ -232,8 +232,8 @@ body {
 		<div class="message_input_wrapper">
 			<input type ="text" name="message" id="message" class="message_input" placeholder="Type your message here..." />
 		</div>
-		<div class="send_message">
-			<button class="btn btn-primary" type="button" id="send">SEND</button>
+		<div class="send_message" id="send">
+		SEND
 		</div>
 	</div>
 </div>
