--- a/templates/index2.html
+++ b/templates/index2.html
@@ -227,7 +227,7 @@ body {
 	
 	<div class="chatdiv">  </div>
 	
-	<div class="bottom_wrapper clearfix">
+	<div class="bottom_wrapper clearfix" position="relative">
 	
 		<div class="message_input_wrapper">
 			<input type ="text" name="message" id="message" class="message_input" placeholder="Type your message here..." />
