--- a/templates/index2.html
+++ b/templates/index2.html
@@ -227,13 +227,13 @@ body {
 	
 	<div class="chatdiv">  </div>
 	
-	<div class="bottom_wrapper clearfix" position="relative">
+	<div class="bottom_wrapper clearfix" style="position:absolute;">
 	
 		<div class="message_input_wrapper">
 			<input type ="text" name="message" id="message" class="message_input" placeholder="Type your message here..." />
 		</div>
 		<div class="send_message" id="send">
-		SEND
+		<text style="font-size:27px;">SEND</text>
 		</div>
 	</div>
 </div>
