--- a/templates/index2.html
+++ b/templates/index2.html
@@ -227,7 +227,9 @@ body {
 	
 	<div class="chatdiv">  </div>
 	
-	<div class="bottom_wrapper clearfix" style="position:fixed;">
+	
+</div>
+<div class="bottom_wrapper clearfix" style="position:fixed;bottom:68px;left:320px;width:800px;">
 	
 		<div class="message_input_wrapper">
 			<input type ="text" name="message" id="message" class="message_input" placeholder="Type your message here..." />
@@ -236,7 +238,6 @@ body {
 		<text style="font-size:27px;">SEND</text>
 		</div>
 	</div>
-</div>
 <div class="message_template">
 	<li class="message">
 		<div class="avatar"></div>
