--- a/templates/index2.html
+++ b/templates/index2.html
@@ -18,7 +18,7 @@ body {
   width: calc(100% - 20px);
   max-width: 800px;
   height: 500px;
-  border-radius: 10px;
+  border-radius: 0px;
   background-color: #fff;
   left: 50%;
   top: 50%;
@@ -229,7 +229,7 @@ body {
 	
 	
 </div>
-<div class="bottom_wrapper clearfix" style="position:fixed;bottom:68px;left:320px;width:800px;">
+<div class="bottom_wrapper clearfix" style="bottom:64px;left:320px;width:800px;border-top:1.5px solid gray;">
 	
 		<div class="message_input_wrapper">
 			<input type ="text" name="message" id="message" class="message_input" placeholder="Type your message here..." />
