--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@
 	padding: 10px;
 	padding-right: 20px;
 	padding-left: 30px;
-	background: gray;
+	background: #245580;
 	color: black;
 	border-radius: 5px;
 	display: inline-block;
@@ -64,7 +64,7 @@
 	margin: 10px 0px;
 	padding: 10px;
 	padding-left: 30px;
-	background: gray;
+	background: #507ea7;
 	color: black;
 	border-radius: 5px;
 	display: inline-block;
