--- a/templates/index2.html
+++ b/templates/index2.html
@@ -222,7 +222,7 @@ body {
 			<div class="button minimize"></div>
 			<div class="button maximize"></div>
 		</div>
-		<div class="title">Chatbot for ITIM</div>
+		<div class="title">Chatbot for ECM</div>
 	</div>
 	
 	<div class="chatdiv">  </div>
