--- a/templates/index2.html
+++ b/templates/index2.html
@@ -215,6 +215,7 @@ body {
 	
 </head>
 <body>
+<div>
 <div class="chat_window">
 	<div class="top_menu">
 		<div class="buttons">
@@ -237,7 +238,8 @@ body {
 		<div class="send_message" id="send">
 		<text style="font-size:27px;">SEND</text>
 		</div>
-	</div>
+</div>
+</div>
 <div class="message_template">
 	<li class="message">
 		<div class="avatar"></div>
