--- a/templates/index2.html
+++ b/templates/index2.html
@@ -201,7 +201,7 @@ body {
 }
     </style>
 	
-	<link type="text/css" rel="stylesheet" href="static/css/style.css"></link>
+	<link type="text/css" rel="stylesheet" href="static/css/style.css?r=6"></link>
 	<script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
