--- a/templates/index2.html
+++ b/templates/index2.html
@@ -228,7 +228,7 @@ body {
 	
 	<div class="chatdiv">  </div>
 	
-	<div class="bottom_wrapper clearfix" style="bottom:64px;left:320px;width:800px;border-top:1.5px solid gray;">
+	<div class="bottom_wrapper clearfix" style="position:relative;bottom:64px;left:320px;width:800px;border-top:1.5px solid gray;">
 	
 		<div class="message_input_wrapper">
 			<input type ="text" name="message" id="message" class="message_input" placeholder="Type your message here..." />
