--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,7 +40,7 @@
 	padding-right: 20px;
 	padding-left: 30px;
 	background: #245580;
-	color: gray;
+	color: black;
 	border-radius: 5px;
 	display: inline-block;
 }
@@ -65,7 +65,7 @@
 	padding: 10px;
 	padding-left: 30px;
 	background: #507ea7;
-	color: gray;
+	color: black;
 	border-radius: 5px;
 	display: inline-block;
 }
