--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,7 +55,7 @@
 	left: auto;
 	border-top: 10px solid transparent;
 	border-bottom: 10px solid transparent;
-	border-left: 10px solid #245580;
+	border-left: 10px solid #507ea7;
  	right: 0px;
 
 }
