--- a/templates/index2.html
+++ b/templates/index2.html
@@ -202,11 +202,8 @@ body {
     </style>
 	
 	<link type="text/css" rel="stylesheet" href="static/css/style.css?r=4"></link>
-	<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	
+  <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   <script
   src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
