--- a/templates/index2.html
+++ b/templates/index2.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Chatbot</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css?e=1" rel="stylesheet">
     <style type="text/css">
         * {
   box-sizing: border-box;
@@ -201,18 +201,18 @@ body {
 }
     </style>
 	
-	<link type="text/css" rel="stylesheet" href="static/css/style.css?r=1"></link>
+	<link type="text/css" rel="stylesheet" href="static/css/style.css?r=2"></link>
 	
  <script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  src="https://code.jquery.com/jquery-3.1.1.min.js?d=1"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
   <script
-  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js?b=1"
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="static/js/Script.js?a=11"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js?c=1"></script>
+	<script type="text/javascript" src="static/js/Script.js?a=12"></script>
 	
 </head>
 <body>
